Added watermarks onto the logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="py-2" style="">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><img class="img-fluid d-block mx-auto" src="assets/Logo_BG.png"></div>
+        <div class="col-md-12"><img class="img-fluid d-block mx-auto" src="assets/Logo_Text_NoBG.png"></div>
       </div>
     </div>
   </div>
