--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         <div class="col-6 col-lg-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Connor_Orton.jpg">
           <h4> <b>Connor Orton</b></h4>
           <p class="mb-3">Founder, Games Programmer</p>
-          <p class="mb-0" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project pipeline. A link to his portfolio can be found here: <a href="#" class="text-success">Portfolio Link</a><br></p>
+          <p class="mb-0" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project pipeline. A link to his portfolio can be found here: (under construction)<br></p>
         </div>
         <div class="col-6 col-lg-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Natalie_Smith.jpeg">
           <h4> <b>Natalie Smith</b></h4>
           <p class="mb-3">2D Artist</p>
-          <p class="mb-0">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more. A link to her portfolio can be found here: <a href="#" class="text-success">Portfolio Link</a></p>
+          <p class="mb-0">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more. A link to her portfolio can be found here:&nbsp;(under construction)</p>
         </div>
       </div>
     </div>
