--- a/index.html
+++ b/index.html
@@ -80,17 +80,16 @@
           <p class="mb-0" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
         </div>
         <div class="col-lg-4 p-3">
-          <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
+          <div class="carousel slide carousel-fade" data-ride="carousel" id="carousel" data-interval="5000">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block w-75" src="assets/PPA_Screenshot1.jpg"> </div>
-              <div class="carousel-item"> <img class="d-block w-75" src="assets/PPA_Screenshot2.jpg"> </div>
-              <div class="carousel-item"> <img class="d-block w-75" src="assets/PPA_Screenshot3.jpg"> </div>
-              <div class="carousel-item"> <img class="d-block w-75" src="assets/PPA_Screenshot4.jpg"> </div>
-            </div>
-            <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span></a>
-            <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span></a>
+              <div class="carousel-item active"> <img class="d-block img-fluid" src="assets/PPA_Screenshot1.jpg">
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot2.jpg">
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot3.jpg">
+              </div>
+              <div class="carousel-item"><img class="img-fluid" src="assets/PPA_Screenshot4.jpg"></div>
+            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
           </div>
         </div>
       </div>
@@ -113,6 +112,7 @@
       </div>
     </div>
   </div>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
