--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
           <p class="mb-0" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
         </div>
         <div class="col-lg-4 p-3">
-          <div class="carousel slide carousel-fade" data-ride="carousel" id="carousel" data-interval="5000">
+          <div class="carousel slide carousel-fade" data-ride="carousel" id="carousel_PPA" data-interval="5000">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid" src="assets/PPA_Screenshot1.jpg">
+              <div class="carousel-item active" id="carousel_PPA_active"> <img class="d-block img-fluid" src="assets/PPA_Screenshot1.jpg" id="carousel_PPA_image1">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot2.jpg">
+              <div class="carousel-item" id="carousel_PPA_slide2"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot2.jpg" id="carousel_PPA_image2">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot3.jpg">
+              <div class="carousel-item" id="carousel_slide3"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot3.jpg" id="carousel_PPA_image3">
               </div>
-              <div class="carousel-item"><img class="img-fluid" src="assets/PPA_Screenshot4.jpg"></div>
+              <div class="carousel-item" id="carousel_PPA_slide4"><img class="d-block img-fluid w-100" src="assets/PPA_Screenshot4.jpg" id="carousel_PPA_image4"></div>
             </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
           </div>
         </div>
