--- a/index.html
+++ b/index.html
@@ -80,15 +80,16 @@
           <p class="mb-0" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
         </div>
         <div class="col-lg-4 p-3">
-          <div class="carousel slide" data-ride="carousel" id="carousel_PPA" data-interval="5000">
+          <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
             <div class="carousel-inner">
-              <div class="carousel-item active" id="carousel_PPA_active"> <img class="d-block img-fluid" src="assets/PPA_Screenshot1.jpg" id="carousel_PPA_image1">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot1.jpg">
               </div>
-              <div class="carousel-item" id="carousel_PPA_slide2"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot2.jpg" id="carousel_PPA_image2">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot2.jpg">
               </div>
-              <div class="carousel-item" id="carousel_slide3"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot3.jpg" id="carousel_PPA_image3">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot3.jpg">
               </div>
-              <div class="carousel-item" id="carousel_PPA_slide4"><img class="d-block img-fluid w-100" src="assets/PPA_Screenshot4.jpg" id="carousel_PPA_image4"></div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot4.jpg">
+              </div>
             </div> <a class="carousel-control-prev" href="#carousel_ppa" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel_ppa" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
           </div>
         </div>
@@ -112,7 +113,9 @@
       </div>
     </div>
   </div>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
