--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="wireframe.css">
 </head>
 
-<body class="bg-primary">
-  <div class="py-2" style="">
+<body class="bg-primary" style="	background-image: url(assets/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <div class="py-2 bg-primary" style="">
     <div class="container">
       <div class="row">
         <div class="col-md-12"><img class="img-fluid d-block mx-auto" src="assets/Logo_Text_NoBG.png"></div>
@@ -113,7 +113,7 @@
       </div>
     </div>
   </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
