Few image changes

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   </nav>
   <div class="py-3" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
     <div class="container bg-light">
-      <div class="row bg-light" style="">
-        <div class="col-md-6 text-center bg-light"><img class="img-fluid d-block mx-auto bg-light" src="assets/Engine_Screenshot1.PNG"></div>
-        <div class="bg-white ml-auto border col-md-6 bg-light p-4">
-          <h1 class="text-center py-3">About us</h1>
-          <p class="mb-0 w-100 py-3" style="">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
+      <div class="row" style="">
+        <div class="text-center col-md-6 bg-light"><img class="d-block img-fluid" src="assets/Logo_ZoomedOut_NoBG.png"></div>
+        <div class="ml-auto border col-md-6 p-4 bg-light">
+          <h1 class="text-center py-3 bg-secondary">About us</h1>
+          <p style="" class="my-2 py-4 bg-primary">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
         </div>
       </div>
     </div>
@@ -46,19 +46,19 @@
     <div class="container bg-light">
       <div class="row">
         <div class="col-md-12 mx-auto mt-2">
-          <h1 class="text-center">The Team</h1>
+          <h1 class="text-center bg-secondary">The Team</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-6 col-lg-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Connor_Orton.jpg">
-          <h4> <b>Connor Orton</b></h4>
-          <p class="mb-3">Founder, Games Programmer</p>
-          <p class="mb-0" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project pipeline. A link to his portfolio can be found here: (under construction)<br></p>
+          <h4 class="bg-secondary"> <b>Connor Orton</b></h4>
+          <p class="mb-3 bg-secondary">Founder, Games Programmer</p>
+          <p class="mb-0 bg-primary" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project pipeline. A link to his portfolio can be found here: (under construction)<br></p>
         </div>
         <div class="col-6 col-lg-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Natalie_Smith.jpeg">
-          <h4> <b>Natalie Smith</b></h4>
-          <p class="mb-3">2D Artist</p>
-          <p class="mb-0">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more. A link to her portfolio can be found here:&nbsp;(under construction)</p>
+          <h4 class="bg-secondary"> <b>Natalie Smith</b></h4>
+          <p class="mb-3 bg-secondary">2D Artist</p>
+          <p class="mb-0 bg-primary">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more. A link to her portfolio can be found here:&nbsp;(under construction)</p>
         </div>
       </div>
     </div>
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="row bg-light">
         <div class="col-md-12 bg-light my-2">
-          <h1 class="text-center">Game Projects</h1>
+          <h1 class="text-center bg-secondary">Game Projects</h1>
         </div>
       </div>
     </div>
@@ -76,8 +76,8 @@
     <div class="container">
       <div class="row bg-light">
         <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center">
-          <h1>Pixel Pinball Arcade</h1>
-          <p class="mb-0" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
+          <h1 class="bg-secondary">Pixel Pinball Arcade</h1>
+          <p class="mb-0 bg-primary" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
         </div>
         <div class="col-lg-4 p-3">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
@@ -100,7 +100,7 @@
     <div class="container">
       <div class="row bg-light">
         <div class="mx-auto p-4 col-lg-7">
-          <h1 class="mb-4">Contact Us</h1>
+          <h1 class="mb-4 bg-secondary">Contact Us</h1>
           <form action="https://formspree.io/connor1994@hotmail.com" method="POST">
             <div class="form-row">
               <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" name="Name"> </div>
