--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div class="container bg-light">
       <div class="row" style="">
         <div class="text-center col-md-6 bg-light"><img class="d-block img-fluid" src="assets/Logo_ZoomedOut_NoBG.png"></div>
-        <div class="ml-auto border col-md-6 p-4 bg-light">
-          <h1 class="text-center py-3 bg-secondary">About us</h1>
-          <p style="" class="my-2 py-4 bg-primary">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
+        <div class="ml-auto col-md-6 p-4">
+          <h1 class="text-center py-3 bg-secondary">About Us</h1>
+          <p style="" class="my-2 bg-primary py-4 px-3">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
         </div>
       </div>
     </div>
@@ -51,14 +51,16 @@
       </div>
       <div class="row">
         <div class="col-6 col-lg-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Connor_Orton.jpg">
-          <h4 class="bg-secondary"> <b>Connor Orton</b></h4>
-          <p class="mb-3 bg-secondary">Founder, Games Programmer</p>
-          <p class="mb-0 bg-primary" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project pipeline. A link to his portfolio can be found here: (under construction)<br></p>
+          <h4 class="bg-secondary"> <b>Connor Orton</b>
+            <p class="lead py-1">Founder, Games Programmer</p>
+          </h4>
+          <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline. A link to his portfolio can be found here:&nbsp;(under construction)<br></p>
         </div>
         <div class="col-6 col-lg-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Natalie_Smith.jpeg">
-          <h4 class="bg-secondary"> <b>Natalie Smith</b></h4>
-          <p class="mb-3 bg-secondary">2D Artist</p>
-          <p class="mb-0 bg-primary">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more. A link to her portfolio can be found here:&nbsp;(under construction)</p>
+          <h4 class="bg-secondary"> <b>Natalie Smith</b>
+            <p class="lead py-1">2D Artist</p>
+          </h4>
+          <p class="mb-0 bg-primary px-2 py-2">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more. A link to her portfolio can be found here:&nbsp;(under construction)</p>
         </div>
       </div>
     </div>
@@ -76,8 +78,8 @@
     <div class="container">
       <div class="row bg-light">
         <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center">
-          <h1 class="bg-secondary">Pixel Pinball Arcade</h1>
-          <p class="mb-0 bg-primary" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
+          <h1 class="bg-secondary text-center">Pixel Pinball Arcade</h1>
+          <p class="mb-0 bg-primary py-2 px-2" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
         </div>
         <div class="col-lg-4 p-3">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
@@ -91,6 +93,23 @@
               <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot4.jpg">
               </div>
             </div> <a class="carousel-control-prev" href="#carousel_ppa" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel_ppa" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="">
+    <div class="container">
+      <div class="row bg-light">
+        <div class="col-lg-8 p-md-5 p-3 d-flex flex-column justify-content-center">
+          <h2 class="bg-secondary text-center" contenteditable="true">Upcoming: Fantasy Tower Defense Game</h2>
+          <p class="mb-0 bg-primary px-2 py-2">A fantasy tower defense game for android is currently in development and will be published on the google play store in the near future.</p>
+        </div>
+        <div class="col-lg-4 p-3">
+          <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <img class="d-block w-100" src="assets/QuestionMark.png"> </div>
+            </div>
           </div>
         </div>
       </div>
