Updated page order a bit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   </div>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar13">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar13">
       </div>
@@ -35,7 +34,7 @@
     <div class="container bg-light">
       <div class="row" style="">
         <div class="text-center col-md-6 bg-light"><img class="d-block img-fluid py-4 px-4 my-4 mx-auto" src="assets/Logo_ZoomedOut_NoBG.png"></div>
-        <div class="ml-auto col-md-6 p-4">
+        <div class="col-md-6 p-4">
           <h1 class="text-center py-3 bg-secondary">About Us</h1>
           <p style="" class="my-2 bg-primary py-4 px-3">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
         </div>
@@ -43,20 +42,20 @@
     </div>
   </div>
   <div class="text-center py-3">
-    <div class="container bg-light">
+    <div class="bg-light container p-4">
       <div class="row">
         <div class="col-md-12 mx-auto mt-2">
           <h1 class="text-center bg-secondary">The Team</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-6 col-lg-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Connor_Orton.jpg">
+        <div class="col-12 col-lg-6" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Connor_Orton.jpg">
           <h4 class="bg-secondary"> <b>Connor Orton</b>
             <p class="lead py-1">Founder, Games Programmer</p>
           </h4>
           <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline. A link to his portfolio can be found here:&nbsp;(under construction)<br></p>
         </div>
-        <div class="col-6 col-lg-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Natalie_Smith.jpeg">
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Natalie_Smith.jpeg">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
@@ -68,14 +67,16 @@
   <div class="">
     <div class="container">
       <div class="row bg-light">
-        <div class="col-md-12 bg-light my-2">
-          <h1 class="text-center bg-secondary">Game Projects</h1>
-        </div>
       </div>
     </div>
   </div>
   <div class="">
     <div class="container">
+      <div class="row">
+        <div class="bg-light col-md-12 p-4">
+          <h1 class="text-center bg-secondary">Game Projects</h1>
+        </div>
+      </div>
       <div class="row bg-light">
         <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center">
           <h1 class="bg-secondary text-center">Pixel Pinball Arcade</h1>
