--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-lg-6" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Connor_Orton.jpg">
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Connor_Orton.jpg">
           <h4 class="bg-secondary"> <b>Connor Orton</b>
             <p class="lead py-1">Founder, Games Programmer</p>
           </h4>
