--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
   </nav>
   <div class="py-3" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
     <div class="container bg-light">
-      <div class="row" style="">
-        <div class="text-center col-md-6 bg-light"><img class="d-block img-fluid py-4 px-4 my-4 mx-auto" src="assets/Logo_ZoomedOut_NoBG.png"></div>
-        <div class="col-md-6 p-4">
+      <div class="row">
+        <div class="text-center col-md-12 bg-light col-lg-12"><img class="d-block img-fluid mx-auto w-50" src="assets/Logo_ZoomedOut_NoBG.png"></div>
+      </div>
+      <div class="row p-4" style="">
+        <div class="col-md-12 col-lg-12">
           <h1 class="text-center py-3 bg-secondary">About Us</h1>
           <p style="" class="my-2 bg-primary py-4 px-3">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
         </div>
