--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 
 <body class="bg-primary" style="	background-image: url(assets/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-  <div class="py-2 bg-primary" style="">
+  <div class="py-2 bg-secondary" style="	background-image: linear-gradient(to bottom, black, black);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><img class="img-fluid d-block mx-auto" src="assets/Logo_Text_NoBG.png"></div>
+        <div class="col-md-12"><img class="img-fluid d-block w-100" src="assets/reel 2 (1).gif"></div>
       </div>
     </div>
   </div>
