--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
   </nav>
-  <div class="py-3" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
+  <div class="" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
     <div class="container bg-light">
       <div class="row">
         <div class="text-center col-md-12 bg-light col-lg-12"><img class="d-block img-fluid mx-auto w-50" src="assets/Logo_ZoomedOut_NoBG.png"></div>
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-  <div class="text-center py-3">
+  <div class="text-center">
     <div class="bg-light container p-4">
       <div class="row">
         <div class="col-md-12 mx-auto mt-2">
@@ -118,7 +118,7 @@
       </div>
     </div>
   </div>
-  <div class="py-3 text-center">
+  <div class="text-center">
     <div class="container">
       <div class="row bg-light">
         <div class="mx-auto p-4 col-lg-7">
