--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="py-2 bg-secondary" style="	background-image: linear-gradient(to bottom, black, black);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><img class="img-fluid d-block w-100" src="assets/reel 2 (1).gif"></div>
+        <div class="col-md-12"><img class="img-fluid d-block w-100" src="assets/FCG_Vogo.gif"></div>
       </div>
     </div>
   </div>
