--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </nav>
   <div class="" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
-    <div class="container bg-light">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row p-4" style="">
         <div class="col-md-12 col-lg-12">
           <h1 class="text-center py-3 bg-secondary">About Us</h1>
@@ -41,7 +41,7 @@
     </div>
   </div>
   <div class="text-center">
-    <div class="bg-light container p-4">
+    <div class="container p-4" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 mx-auto mt-2">
           <h1 class="text-center bg-secondary">The Team</h1>
@@ -69,19 +69,19 @@
       </div>
     </div>
   </div>
-  <div class="">
-    <div class="container">
+  <div class="" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="bg-light col-md-12 p-4">
+        <div class="col-md-12 p-4">
           <h1 class="text-center bg-secondary">Game Projects</h1>
         </div>
       </div>
-      <div class="row bg-light">
-        <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center">
+      <div class="row" style="">
+        <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center" style="">
           <h1 class="bg-secondary text-center">Pixel Pinball Arcade</h1>
           <p class="mb-0 bg-primary py-2 px-2" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
         </div>
-        <div class="col-lg-4 p-3">
+        <div class="col-lg-4 p-3" style="">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
             <div class="carousel-inner">
               <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot1.jpg">
@@ -99,8 +99,8 @@
     </div>
   </div>
   <div class="">
-    <div class="container">
-      <div class="row bg-light">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row" style="">
         <div class="col-lg-8 p-md-5 p-3 d-flex flex-column justify-content-center">
           <h2 class="bg-secondary text-center" contenteditable="true">Upcoming: Fantasy Tower Defense Game</h2>
           <p class="mb-0 bg-primary px-2 py-2">A fantasy tower defense game for android is currently in development and will be published on the google play store in the near future.</p>
@@ -116,8 +116,8 @@
     </div>
   </div>
   <div class="text-center">
-    <div class="container">
-      <div class="row bg-light">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
         <div class="mx-auto p-4 col-lg-7">
           <h1 class="mb-4 bg-secondary">Contact Us</h1>
           <form action="https://formspree.io/connor1994@hotmail.com" method="POST">
@@ -135,6 +135,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
