--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </nav>
   <div class="" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-      <div class="row p-4" style="">
+      <div class="row pb-0 pt-2" style="">
         <div class="col-md-12 col-lg-12">
           <h1 class="text-center py-3 bg-secondary">About Us</h1>
           <p style="" class="my-2 bg-primary py-4 px-3">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
@@ -41,9 +41,9 @@
     </div>
   </div>
   <div class="text-center">
-    <div class="container p-4" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12 mx-auto mt-2">
+        <div class="col-md-12 mx-auto">
           <h1 class="text-center bg-secondary">The Team</h1>
         </div>
       </div>
@@ -72,7 +72,7 @@
   <div class="" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12 p-4">
+        <div class="col-md-12">
           <h1 class="text-center bg-secondary">Game Projects</h1>
         </div>
       </div>
@@ -81,10 +81,10 @@
           <h1 class="bg-secondary text-center">Pixel Pinball Arcade</h1>
           <p class="mb-0 bg-primary py-2 px-2" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
         </div>
-        <div class="col-lg-4 p-3" style="">
+        <div class="col-lg-4" style="">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot1.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid my-4 mx-auto w-100" src="assets/PPA_Screenshot1.jpg">
               </div>
               <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot2.jpg">
               </div>
@@ -101,11 +101,11 @@
   <div class="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row" style="">
-        <div class="col-lg-8 p-md-5 p-3 d-flex flex-column justify-content-center">
-          <h2 class="bg-secondary text-center" contenteditable="true">Upcoming: Fantasy Tower Defense Game</h2>
-          <p class="mb-0 bg-primary px-2 py-2">A fantasy tower defense game for android is currently in development and will be published on the google play store in the near future.</p>
+        <div class="col-lg-8 p-md-5 d-flex flex-column justify-content-center">
+          <h2 class="bg-secondary text-center" style="">Upcoming: 2D Action Sidescroller Horror</h2>
+          <p class="mb-0 bg-primary px-2 py-2">Our next project is a pixel art style 2D Action Horror sidescroller set in a populated city in the modern day. To be released on PC and possibly android.</p>
         </div>
-        <div class="col-lg-4 p-3">
+        <div class="col-lg-4 py-4">
           <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
             <div class="carousel-inner">
               <div class="carousel-item active"> <img class="d-block w-100" src="assets/QuestionMark.png"> </div>
@@ -118,7 +118,7 @@
   <div class="text-center">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="mx-auto p-4 col-lg-7">
+        <div class="mx-auto col-lg-7">
           <h1 class="mb-4 bg-secondary">Contact Us</h1>
           <form action="https://formspree.io/connor1994@hotmail.com" method="POST">
             <div class="form-row">
