--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         <div class="col-lg-4" style="">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid my-4 mx-auto w-100" src="assets/PPA_Screenshot1.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100 mx-auto" src="assets/PPA_Screenshot1.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot2.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100 float-left" src="assets/PPA_Screenshot2.jpg">
               </div>
               <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot3.jpg">
               </div>
