--- a/index.html
+++ b/index.html
@@ -115,23 +115,7 @@
       </div>
     </div>
   </div>
-  <div class="text-center">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-      <div class="row">
-        <div class="mx-auto col-lg-7">
-          <h1 class="mb-4 bg-secondary">Contact Us</h1>
-          <form action="https://formspree.io/connor1994@hotmail.com" method="POST">
-            <div class="form-row">
-              <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" name="Name"> </div>
-              <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" name="Email"> </div>
-            </div>
-            <div class="form-group"> <input type="text" class="form-control" id="form29" placeholder="Subject" name="Subject"> </div>
-            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" placeholder="Your message" name="Message"></textarea> </div> <button type="submit" class="btn btn-primary">Send</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="text-center"></div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
