--- a/connororton.html
+++ b/connororton.html
@@ -9,6 +9,16 @@
 </head>
 
 <body style="	background-image: url(D:/Repos/Fine-Chap-Games-Website/assets/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <div class="" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row pb-0 pt-2" style="">
+        <div class="col-md-12 col-lg-12">
+          <h1 class="text-center py-3 bg-secondary">About Us</h1>
+          <p style="" class="my-2 bg-primary py-4 px-3">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
