--- a/connororton.html
+++ b/connororton.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
+  <title>Connor Orton (Portfolio)</title>
+  <meta name="description" content="Welcome to the portfolio of Connor Orton">
 </head>
 
 <body style="	background-image: url(D:/Repos/Fine-Chap-Games-Website/assets/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
