--- a/connororton.html
+++ b/connororton.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Welcome to the portfolio of Connor Orton">
 </head>
 
-<body style="	background-image: url(D:/Repos/Fine-Chap-Games-Website/assets/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+<body style="	background-image: url(&quot;assets/FCG_Wallpaper.jpg&quot;);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
   <div class="" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row pb-0 pt-2" style="">
