--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
   <title>Natalie Smith (Portfolio)</title>
   <meta name="description" content="Welcome to the portfolio page of Natalie Smith.">
+  <meta name="keywords" content="Natalie Smith 2D Art Portfolio">
 </head>
 
 <body style="	background-image: url(&quot;assets/FCG_Wallpaper.jpg&quot;);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
