--- a/connororton.html
+++ b/connororton.html
@@ -12,6 +12,30 @@
 </head>
 
 <body style="	background-image: url(&quot;assets/FCG_Wallpaper.jpg&quot;);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <div class="py-5" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6"> <img class="img-fluid d-block" src="assets/Connor_Orton.jpg"> </div>
+        <div class="px-md-5 p-3 col-md-6 d-flex flex-column justify-content-center">
+          <h1>Connor Orton</h1>
+          <p class="mb-3 lead">Aspiring Games Developer. Welcome to my portfolio.&nbsp;<br></p>
+          <a class="btn btn-primary" href="assets/Connor Orton CV Template.png"><i class="fa fa-download fa-fw"></i>Download CV</a>
+          <p class="mb-2">Social Media</p>
+          <div class="row">
+            <div class="col-md-12"> <a href="#">
+                <i class="fa fa-stop-circle fa-3x mr-3 text-muted d-inline"></i>
+              </a> <a href="#">
+                <i class="fa fa-circle-o fa-3x mx-3 text-muted d-inline"></i>
+              </a> <a href="#">
+                <i class="fa fa-stop-circle-o fa-3x mx-3 text-muted d-inline"></i>
+              </a> <a href="#">
+                <i class="fa fa-circle fa-3x ml-3 text-muted d-inline"></i>
+              </a> </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
