--- a/connororton.html
+++ b/connororton.html
@@ -19,7 +19,7 @@
         <div class="px-md-5 p-3 col-md-6 d-flex flex-column justify-content-center">
           <h1>Connor Orton</h1>
           <p class="mb-3 lead">Aspiring Games Developer. Welcome to my portfolio.&nbsp;<br></p>
-          <a class="btn btn-primary" href="assets/Connor Orton CV Template.png"><i class="fa fa-download fa-fw"></i>Download CV</a>
+          <a class="btn btn-primary" href="assets/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
           <p class="mb-2">Social Media</p>
           <div class="row">
             <div class="col-md-12"> <a href="#">
