--- a/connororton.html
+++ b/connororton.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="	background-image: url(&quot;assets/FCG_Wallpaper.jpg&quot;);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-  <div class="py-5" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <div class="py-3" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
         <div class="col-md-6"> <img class="img-fluid d-block" src="assets/Connor_Orton.jpg"> </div>
@@ -20,25 +20,38 @@
           <h1>Connor Orton</h1>
           <p class="mb-3 lead">Aspiring Games Developer. Welcome to my portfolio.&nbsp;<br></p>
           <a class="btn btn-primary" href="assets/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
-          <p class="mb-2">Social Media</p>
-          <div class="row">
-            <div class="col-md-12"> <a href="#">
-                <i class="fa fa-stop-circle fa-3x mr-3 text-muted d-inline"></i>
-              </a> <a href="#">
-                <i class="fa fa-circle-o fa-3x mx-3 text-muted d-inline"></i>
-              </a> <a href="#">
-                <i class="fa fa-stop-circle-o fa-3x mx-3 text-muted d-inline"></i>
-              </a> <a href="#">
-                <i class="fa fa-circle fa-3x ml-3 text-muted d-inline"></i>
-              </a> </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="">
+    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar13">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar13"> <a href="#" class="navbar-brand d-none d-md-block"><img src="assets/Fine Chap Games/Logo_ZoomedOut_NoBG.png" width="35" height="35" class="d-inline-block align-top" alt="">
+          <b class=""> Fine Chap Games</b>
+        </a>
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item"> <a class="nav-link" href="#">
+              <i class="fa fa-twitter fa-fw"></i>
+            </a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#">
+              <i class="fa fa-facebook fa-fw"></i>
+            </a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#">
+              <i class="fa fa-slack fa-fw"></i>
+            </a> </li>
+        </ul>
+      </div>
+    </div>
+    <div class="container"></div>
+  </nav>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" style=""></script>
 </body>
 
 </html>
