--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
           <h4 class="bg-secondary"> <b>Connor Orton</b>
             <p class="lead py-1">Founder, Games Programmer</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio Link</a>
+          <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
         <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Natalie_Smith.jpeg">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2" href="nataliesmith.html" style="">Portfolio Link</a>
+          <p class="mb-0 bg-primary px-2 py-2">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2" href="nataliesmith.html" style="">Portfolio &amp; CV</a>
         </div>
       </div>
     </div>
