--- a/connororton.html
+++ b/connororton.html
@@ -11,44 +11,51 @@
   <meta name="keywords" content="Connor Orton Indie Game Development Portfolio">
 </head>
 
-<body style="	background-image: url(&quot;assets/FCG_Wallpaper.jpg&quot;);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+<body style="	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button" data-toggle="collapse" data-target="#navbar14">
+        <p class="navbar-brand mb-0 text-white">
+          <i class="fa d-inline fa-lg fa-stop-circle"></i> BRAND </p>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar14">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
+        </ul>
+        <img class="img-fluid d-block" src="assets/FineChapGames/Logo_ZoomedOut_NoBG.png" width="50">
+        <p class="d-none d-md-block lead mb-0  text-white">Fine Chap Games</p>
+      </div>
+    </div>
+  </nav>
   <div class="py-3" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
-        <div class="col-md-6"> <img class="img-fluid d-block" src="assets/Connor_Orton.jpg"> </div>
+        <div class="col-md-6"> <img class="img-fluid d-block" src="assets/Selfies/Connor_Orton.jpg"> </div>
         <div class="px-md-5 p-3 col-md-6 d-flex flex-column justify-content-center">
           <h1>Connor Orton</h1>
-          <p class="mb-3 lead">Aspiring Games Developer. Welcome to my portfolio.&nbsp;<br></p>
+          <h3 contenteditable="true">Aspiring Games Developer</h3>
+          <p class="mb-3 lead">Welcome to my portfolio page.&nbsp;<br></p>
           <a class="btn btn-primary" href="assets/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
         </div>
       </div>
     </div>
   </div>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar13">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar13"> <a href="#" class="navbar-brand d-none d-md-block"><img src="assets/Fine Chap Games/Logo_ZoomedOut_NoBG.png" width="35" height="35" class="d-inline-block align-top" alt="">
-          <b class=""> Fine Chap Games</b>
-        </a>
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link" href="#">
-              <i class="fa fa-twitter fa-fw"></i>
-            </a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">
-              <i class="fa fa-facebook fa-fw"></i>
-            </a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">
-              <i class="fa fa-slack fa-fw"></i>
-            </a> </li>
-        </ul>
+  <div class="py-3 text-center" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+    <div class="container">
+      <div class="row">
+        <div class="mx-auto p-4 col-lg-7">
+          <h1 class="mb-4">Contact Form</h1>
+          <form action="https://formspree.io/connor1994@hotmail.com">
+            <div class="form-row">
+              <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" required="required"> </div>
+              <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required"> </div>
+            </div>
+            <div class="form-group"> <input type="text" class="form-control" id="form29" placeholder="Subject" required="required"> </div>
+            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" placeholder="Your message"></textarea> </div> <button type="submit" class="btn btn-primary">Send</button>
+          </form>
+        </div>
       </div>
     </div>
-    <div class="container"></div>
-  </nav>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" style=""></script>
