--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <link rel="stylesheet" href="wireframe.css">
 </head>
 
-<body class="bg-primary" style="	background-image: url(assets/FCG_Wallpaper.jpg);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+<body class="bg-primary" style="	background-position: top left;	background-size: 100%;	background-repeat: repeat;	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);">
   <div class="" style="	background-image: linear-gradient(to bottom, black, black);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid mx-auto" src="assets/FCG_Vogo.gif"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto" src="assets/Fine Chap Games/FCG_Vogo.gif"></div>
       </div>
     </div>
   </div>
@@ -48,13 +48,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Connor_Orton.jpg">
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Selfies/Connor_Orton.jpg">
           <h4 class="bg-secondary"> <b>Connor Orton</b>
-            <p class="lead py-1">Founder, Games Programmer</p>
+            <p class="lead py-1">Project Leader, Games Programmer</p>
           </h4>
           <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
-        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Natalie_Smith.jpeg">
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Selfies/Natalie_Smith.jpeg">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
@@ -79,18 +79,18 @@
       <div class="row" style="">
         <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center" style="">
           <h1 class="bg-secondary text-center">Pixel Pinball Arcade</h1>
-          <p class="mb-0 bg-primary py-2 px-2" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found here: <a href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB" class="text-success">Pixel Pinball Arcade</a><br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p>
+          <p class="mb-0 bg-primary py-2 px-2" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android created in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Director, Technical Artist, Games Programmer)<br>- Natalie Smith (Concept Artist, 2D Artist)</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
         </div>
         <div class="col-lg-4" style="">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100 mx-auto" src="assets/PPA_Screenshot1.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100 mx-auto" src="assets/Portfolio/PPA/PPA_Screenshot1.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100 float-left" src="assets/PPA_Screenshot2.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100 float-left" src="assets/Portfolio/PPA/PPA_Screenshot2.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot3.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/Portfolio/PPA/PPA_Screenshot3.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/PPA_Screenshot4.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/Portfolio/PPA/PPA_Screenshot4.jpg">
               </div>
             </div> <a class="carousel-control-prev" href="#carousel_ppa" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel_ppa" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
           </div>
@@ -108,14 +108,13 @@
         <div class="col-lg-4 py-4">
           <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block w-100" src="assets/QuestionMark.png"> </div>
+              <div class="carousel-item active"> <img class="d-block w-100" src="assets/Fine Chap Games/QuestionMark.png"> </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="text-center"></div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
