--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="" style="	background-image: linear-gradient(to bottom, black, black);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid mx-auto" src="assets/Fine Chap Games/FCG_Vogo.gif"></div>
+        <div class="col-md-12"><img class="d-block img-fluid mx-auto" src="assets/FineChapGames/FCG_Vogo.gif"></div>
       </div>
     </div>
   </div>
