--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon">
-  <title>Fine Chap Games Homepage</title>
+  <title>Fine Chap Games</title>
   <meta name="description" content="Welcome to the Fine Chap Games indie games development team's website!">
   <meta name="keywords" content="Fine Chap Games Development Indie">
   <meta name="author" content="Pingendo">
