--- a/connororton.html
+++ b/connororton.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
-  <title>Connor Orton (Portfolio)</title>
+  <title>Fine Chap Games - Connor Orton</title>
   <meta name="description" content="Welcome to the portfolio of Connor Orton">
   <meta name="keywords" content="Connor Orton Indie Game Development Portfolio">
 </head>
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="mx-auto p-4 col-lg-7">
           <h1 class="mb-4">Contact Form</h1>
-          <form action="https://formspree.io/f/mjvjadeg" method="POST">
+          <form action="https://formspree.io/connor1994@hotmail.com">
             <div class="form-row">
               <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" required="required"> </div>
               <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required"> </div>
