--- a/connororton.html
+++ b/connororton.html
@@ -34,7 +34,7 @@
           <h1>Connor Orton</h1>
           <h3>Game Designer &amp; Programmer</h3>
           <p class="mb-3 lead">I am a passionate video game developer who specializes in design and programming. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to experience. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p>
-          <a class="btn btn-primary" href="assets/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
+          <a class="btn btn-primary" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
         </div>
       </div>
     </div>
