--- a/connororton.html
+++ b/connororton.html
@@ -26,11 +26,11 @@
       </div>
     </div>
   </nav>
-  <div style="">
+  <div style="" class="my-3">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-6"> <img class="img-fluid d-block" src="assets/Portrait/Connor_Orton.jpg"> </div>
-        <div class="px-md-5 p-3 col-md-6 d-flex flex-column justify-content-center">
+        <div class="col-md-6 my-3" style=""> <img class="img-fluid d-block" src="assets/Portrait/Connor_Orton.jpg"> </div>
+        <div class="px-md-5 col-md-6 justify-content-center d-flex flex-column" style="">
           <h1>Connor Orton</h1>
           <h3>Game Designer &amp; Programmer</h3>
           <p class="mb-3 lead">I am a passionate video game developer who specializes in design and programming. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to experience. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p>
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="py-3" style="">
+  <div class="mt-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-lg-8 p-md-5 p-3 d-flex flex-column justify-content-center">
