--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       </div>
       <div class="row">
         <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
-          <h4 class="bg-secondary"> <b>Connor Orton</b>
+          <h4 class="bg-secondary"> <b>Connor Orton BSC</b>
             <p class="lead py-1">Game Designer &amp; Programmer</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
+          <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the games designer and programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
         <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Portrait/Natalie_Smith.jpeg">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
@@ -72,7 +72,7 @@
   <div class="" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 pb-2">
           <h1 class="text-center bg-secondary">Game Projects</h1>
         </div>
       </div>
