--- a/connororton.html
+++ b/connororton.html
@@ -29,12 +29,12 @@
   <div style="" class="my-3">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-6 my-3" style=""> <img class="img-fluid d-block" src="assets/Portrait/Connor_Orton.jpg"> </div>
-        <div class="px-md-5 col-md-6 justify-content-center d-flex flex-column" style="">
-          <h1>Connor Orton</h1>
+        <div class="col-md-6 my-3" style=""> <img class="d-block img-fluid" src="assets/Portrait/Connor_Orton.jpg"> </div>
+        <div class="px-md-5 col-md-6 justify-content-center flex-column d-flex" style="">
+          <h1 class="mt-3" contenteditable="true">Connor Orton BSC</h1>
           <h3>Game Designer &amp; Programmer</h3>
           <p class="mb-3 lead">I am a passionate video game developer who specializes in design and programming. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to experience. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p>
-          <a class="btn btn-primary" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
+          <a class="btn btn-primary my-3" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
         </div>
       </div>
     </div>
@@ -42,9 +42,9 @@
   <div class="mt-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-lg-8 p-md-5 p-3 d-flex flex-column justify-content-center">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-8">
           <h1><b>Pixel Pinball Arcade (2020)</b></h1>
-          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:<br></b>- Designing the game concept, gameplay systems and menus<br>- Asset workflow management<br>- Source control management<br>- Engine asset &amp; scene implementation<br>- Writing game system, menu and gameplay scripts<br>- Audio development</p><a class="btn btn-success my-3" href="#">Pixel Pinball Arcade</a>
+          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:<br></b>- Designing the game concept, gameplay systems and menus<br>- Asset workflow management<br>- Source control management<br>- Engine asset &amp; scene implementation<br>- Writing game system, menu and gameplay scripts<br>- Audio development<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3" href="#">Pixel Pinball Arcade</a>
         </div>
         <div class="col-lg-4 p-3">
           <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
@@ -63,7 +63,25 @@
       </div>
     </div>
   </div>
-  <div class="py-3 text-center" style="">
+  <div class="mt-3 pb-3" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12">
+          <h1><b>Battle Beasts - RPG Mechanics Asset Pack (2017)</b></h1>
+          <p class="mb-0">Battle Beasts RPG Mechanics asset pack is a collection of RPG mechanics that I created using Unreal Engine 4 with blueprint visual scripting. It was created as part as my programming module on my BSC Games Production undergraduate degree. The game mechanics included are inspired by the Pokemon game franchise. The main mechanics and system the asset pack includes are:<br><br>- <b>Combat system</b> (Control your beasts against your opponent, use abilities and items to defeat them, features battles against npcs and random encounters.)<br>- <b>Dialogue system</b> (Features multi choice questions and multiple outcomes depending on dialogue choice.)<br>- <b>In-Game database system</b> (For showing the player what beasts exist in the game and if they have captured them)<br>- <b>Engine System databases</b> (To manage units, unit abilities, items etc.)<br>- <b>Shop system</b> (Combined with the dialogue system to allow the player to purchase items using currency from a merchant.)<br>- <b>Bank system</b> (Combined with the dialogue system to store player beasts in a unit storage)<br>- <b>Trade system</b> (Combined with the dialogue system to trade player beasts with NPCs.)<br>-&nbsp;<b>Utility menu</b> (To allow the player to access in-game database, beast team, inventory and options for game preferences.)<br>- <b>Player unit progression</b> (Beasts level up and learn new abilities depending on their level.)</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 px-5 pb-3">
+          <div class="embed-responsive embed-responsive-16by9">
+            <video src="assets/Portfolio/Connor/Battle Beasts - RPG Mechanics Asset Pack - Trailer.mp4" class="embed-responsive-item" controls="controls" width="1
+10"> Your browser does not support HTML5 video. </video>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center mb-2" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="mx-auto p-4 col-lg-7">
