--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2" href="nataliesmith.html" style="">Portfolio &amp; CV</a>
+          <p class="mb-0 bg-primary px-2 py-2">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2" href="nataliesmith.html" style="">Portfolio &amp; CV (Under Construction)</a>
         </div>
       </div>
     </div>
